# lixun-robot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  et --hard aa73967  pyproject.toml  run.py
.github/workflows/: ci.yml
chains/: chat_agent.py
core/: conversation_manager.py  document_processor.py  llm_config.py  vector_store.py
data/documents/: Markdown语法支持.md  Word功能测试.docx  基础功能说明.txt
scripts/: check_env.py  start.py
