[project]
name = "lixun-robot"
version = "0.1.0"
description = "Knowledge base driven chatbot MVP"
dependencies = [
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.40",
    "openai>=1.3.0",
    "faiss-cpu>=1.7.4",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "dashscope>=1.14.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
chatbot = "main:main"